# mini-ugv-stack

./: Dockerfile  LICENSE  README.md  docker-compose.yml  play_demo.sh
docs/: VIDEO.md
scripts/: dev_env.sh
src/control_services_py/: package.xml  setup.cfg  setup.py
src/control_services_py/control_services_py/: health_node.py
src/control_services_py/launch/: full_stack.launch.py  robot_bringup.launch.py
src/control_services_py/resource/: control_services_py
src/ros2_mqtt_bridge_py/: MANIFEST.in  package.xml  setup.cfg  setup.py
src/ros2_mqtt_bridge_py/resource/: ros2_mqtt_bridge_py
src/ros2_mqtt_bridge_py/ros2_mqtt_bridge_py/: bridge.py
src/ros2_mqtt_bridge_py/ros2_mqtt_bridge_py/static/: index.html
src/sensor_driver_cpp/: CMakeLists.txt  package.xml
src/sensor_driver_cpp/src/: imu_publisher.cpp
video/: gst_rx.sh  gst_tx.sh
video/demo_bag/: demo_bag_0.db3  metadata.yaml
