[metadata]
name = control_services_py
version = 0.0.1
description = Health publisher and ping service

[options]
packages = find:
package_dir =
    = .
include_package_data = True
zip_safe = True
install_requires =
    setuptools

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    health_node = control_services_py.health_node:main

# Маркеры ament + package.xml (+ опционально launch файлы)
[options.data_files]
share/ament_index/resource_index/packages = resource/control_services_py
share/control_services_py = package.xml
share/control_services_py/launch = launch/*.py

[develop]
script_dir=$base/lib/control_services_py
[install]
install_scripts=$base/lib/control_services_py
