<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_mqtt_bridge_py</name>
  <version>0.0.1</version>
  <description>ROS2 → MQTT bridge with lightweight REST</description>
  <maintainer email="andrewa.work.il@gmail.com">andrew</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export><build_type>ament_python</build_type></export>
</package>
