[metadata]
name = ros2_mqtt_bridge_py
version = 0.0.1
description = ROS2 → MQTT bridge with lightweight REST

[options]
packages = find:
package_dir =
    = .
include_package_data = True
zip_safe = True
install_requires =
    setuptools
    fastapi
    uvicorn
    paho-mqtt

[options.packages.find]
where = .

[options.package_data]
ros2_mqtt_bridge_py = static/*

[options.entry_points]
console_scripts =
    bridge = ros2_mqtt_bridge_py.bridge:main

# ВАЖНО: маркеры ament + package.xml, чтобы убрать предупреждения colcon
[options.data_files]
share/ament_index/resource_index/packages = resource/ros2_mqtt_bridge_py
share/ros2_mqtt_bridge_py = package.xml

[develop]
script_dir=$base/lib/ros2_mqtt_bridge_py
[install]
install_scripts=$base/lib/ros2_mqtt_bridge_py

